[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/promotion.gd" type="Script" id=1]
[ext_resource path="res://sprites/white_knight.png" type="Texture" id=2]
[ext_resource path="res://sprites/queen.png" type="Texture" id=3]
[ext_resource path="res://sprites/white_bishop.png" type="Texture" id=4]
[ext_resource path="res://sprites/white.png" type="Texture" id=5]
[ext_resource path="res://sprites/white_rook.png" type="Texture" id=6]
[ext_resource path="res://sprites/dec.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.0723, 18.0723 )

[node name="promotion" type="Node2D"]
z_index = 20
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.686275, 1, 0.0196078, 1 )
position = Vector2( 25, 99.9999 )
scale = Vector2( 0.833333, 3.33333 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 25, 25 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 25, 75 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 25, 125 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 25, 175 )
texture = ExtResource( 7 )

[node name="king" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="king"]
visible = false
position = Vector2( 25, 25 )
scale = Vector2( 0.83, 0.83 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="king"]
modulate = Color( 0.388235, 0.447059, 0.278431, 1 )
position = Vector2( 25, 25 )
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 3 )

[node name="knight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="knight"]
visible = false
position = Vector2( 25, 75 )
scale = Vector2( 0.83, 0.83 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="knight"]
modulate = Color( 0.388235, 0.447059, 0.278431, 1 )
position = Vector2( 25, 75 )
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 2 )

[node name="rook" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rook"]
visible = false
position = Vector2( 25, 125 )
scale = Vector2( 0.83, 0.83 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="rook"]
modulate = Color( 0.388235, 0.447059, 0.278431, 1 )
position = Vector2( 25, 125 )
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 6 )

[node name="bishop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bishop"]
visible = false
position = Vector2( 25, 175 )
scale = Vector2( 0.83, 0.83 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="bishop"]
modulate = Color( 0.388235, 0.447059, 0.278431, 1 )
position = Vector2( 25, 175 )
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="king" to="." method="_on_king_mouse_entered"]
[connection signal="mouse_exited" from="king" to="." method="_on_king_mouse_exited"]
[connection signal="mouse_entered" from="knight" to="." method="_on_knight_mouse_entered"]
[connection signal="mouse_exited" from="knight" to="." method="_on_knight_mouse_exited"]
[connection signal="mouse_entered" from="rook" to="." method="_on_rook_mouse_entered"]
[connection signal="mouse_exited" from="rook" to="." method="_on_rook_mouse_exited"]
[connection signal="mouse_entered" from="bishop" to="." method="_on_bishop_mouse_entered"]
[connection signal="mouse_exited" from="bishop" to="." method="_on_bishop_mouse_exited"]
